--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           border-radius: 50%; border: 2px solid #5c7c64;
           animation: shell-pulse-ring 2s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
         }
-        .shell-text { margin-top: 24px; font-size: 16px; font-weight: 500; letter-spacing: 0.5px; opacity: 0.8; }
+        .shell-text { margin-top: 28px; font-size: 18px; font-weight: 400; letter-spacing: 0.3px; opacity: 0.85; font-family: "Newsreader", Georgia, serif; font-style: italic; }
         @keyframes shell-pulse-ring {
           0% { transform: scale(0.95); opacity: 0; }
           50% { transform: scale(1.1); opacity: 1; border-width: 2px; }
@@ -42,7 +42,7 @@
           <img src="/logo.png" alt="Love Ability Gym" class="shell-logo" />
           <div class="shell-pulse-ring"></div>
         </div>
-        <p class="shell-text">Love Ability Gym</p>
+        <p class="shell-text">Welcome to Love Ability Gym</p>
       </div>
     </div>
     <script type="module" src="/src/main.jsx"></script>
